--- a/app/src/main/res/layout/item_menu_detail.xml
+++ b/app/src/main/res/layout/item_menu_detail.xml
@@ -1,87 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/insulin_glucose_item"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:background="@color/primary_gray">
 
-    <TextView
-        android:id="@+id/textView24"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/prod_menu_add_title"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_height="match_parent">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3">
+        <ImageView
+            android:id="@+id/iv_droops"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_coffee" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textView19"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="@string/menu_add_label_name"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/accent" />
-
-            <EditText
-                android:id="@+id/et_menu_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-
-            <TextView
-                android:id="@+id/textView29"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="@string/common_label_comment"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/accent" />
-
-            <EditText
-                android:id="@+id/et_comment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
+            android:orientation="vertical"
+            android:paddingRight="@dimen/activity_horizontal_margin">
 
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView20"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:text="@string/menu_add_label_product"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="@color/accent" />
+                    android:id="@+id/textView"
+                    style="@android:style/TextAppearance.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
 
-                <Button
-                    android:id="@+id/bt_product_sel_all"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/button_select_all" />
+                    android:text="@string/menu_label"
+                    android:textStyle="bold" />
 
-                <Button
-                    android:id="@+id/bt_product_select"
+                <TextView
+                    android:id="@+id/tv_name"
+                    style="@android:style/TextAppearance.Medium"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:onClick="addProduct"
-                    android:text="@string/button_select" />
+                    android:text="6"
+                    android:gravity="right" />
+
+
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:id="@+id/textView3"
+                    style="@android:style/TextAppearance.Medium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="@string/insulin_inject_time"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tv_time"
+                    style="@android:style/TextAppearance.Medium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:text="8:00"
+                    android:gravity="right" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -207,43 +201,29 @@
 
 
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_comment"
+                    style="@android:style/TextAppearance.Medium"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:singleLine="true"
+                    android:hint="@string/action_comment"
+                    android:text="..." />
+
+            </LinearLayout>
         </LinearLayout>
-
-
-    </ScrollView>
-
-
-
-    <ListView
-        android:id="@+id/lv_menu_product_list"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:entries="@array/dialog_period_list" />
-
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/bt_confirm"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="confirm"
-            android:text="@string/button_add" />
-
-        <Button
-            android:id="@+id/bt_cancel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="cancel"
-            android:text="@android:string/cancel" />
     </LinearLayout>
 
-
+    <TextView
+        android:id="@+id/tv_divider"
+        style="@android:style/TextAppearance.Medium"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@drawable/divider"/>
 </LinearLayout>
