--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,7 +12,7 @@
     <item
         android:id="@+id/action_products"
         android:orderInCategory="100"
-        android:title="@string/action_products"
+        android:title="@string/action_menus"
         app:showAsAction="never" />
 
     <item
